It now compiles on esp32, IF there is no esp8266 environments... And, starts and runs...

--- a/DCCpp_ESP/platformio.ini
+++ b/DCCpp_ESP/platformio.ini
@@ -8,18 +8,32 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+# if this is present, the build for esp32 fails due to dependency from esp async webserver to both espasynctcp and asynctcp.
+#[env:esp8266]
+#platform=https://github.com/platformio/platform-espressif8266.git#feature/stage
+#board=d1_mini
+#framework=arduino
+#lib_deps=
+#  ESP8266WiFi
+#  ESP8266mDNS
+#  ArduinoOTA
+#  ESPAsyncTCP@1.1.1
+#  ESPAsyncWebServer
+#  ArduinoJson
+#  TaskScheduler
+#  Hash
+#  SPIFFS
 
-[env:esp8266]
-platform=https://github.com/platformio/platform-espressif8266.git#feature/stage
-board=d1_mini
-framework=arduino
+[env:esp32]
+platform = espressif32_stage
+#https://github.com/platformio/platform-espressif32.git#feature/stage
+framework = arduino
+board = lolin32
 lib_deps=
-  ESP8266WiFi
-  ESP8266mDNS
-  ArduinoOTA
-  ESPAsyncTCP@1.1.1
-  ESPAsyncWebServer
-  ArduinoJson
-  TaskScheduler
-  Hash
-  SPIFFS
+    ESPmDNS
+    https://github.com/me-no-dev/AsyncTCP#a1a184a953fc62e159730df17d9be77c2a2b2853
+    https://github.com/me-no-dev/ESPAsyncWebServer#313f337
+    ArduinoJson
+    TaskScheduler
+    Hash
+    SPIFFS
