DCCpp_Uno now builds on esp32. implementing generation of dcc signal remains to be done though.

--- a/DCCpp_Uno/platformio.ini
+++ b/DCCpp_Uno/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-
 [env:atmelavr]
 platform=atmelavr
 board=megaatmega2560
@@ -19,3 +18,17 @@ lib_deps=
   Ethernet
   SPI
   LiquidCrystal_PCF8574
+
+[env:esp32]
+lib_ldf_mode = off
+platform = espressif32_stage
+#https://github.com/platformio/platform-espressif32.git#feature/stage
+framework = arduino
+board = lolin32
+lib_deps=
+    EEPROM
+    Wire
+    SPI
+lib_ignore=
+    Ethernet,
+    LiquidCrystal_PCF8574
