--- a/DCCpp_Uno/platformio.ini
+++ b/DCCpp_Uno/platformio.ini
@@ -7,11 +7,13 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
-
+[common]
+build_flags=-std=c++14 -O3
 [env:atmelavr]
 platform=atmelavr
 board=megaatmega2560
 framework=arduino
+build_flags=${common.build_flags}
 lib_deps=
   EEPROM
   Wire
@@ -25,6 +27,7 @@ platform = espressif32_stage
 #https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
 board = lolin32
+build_flags=${common.build_flags}
 lib_deps=
     EEPROM
     Wire
