Fix dependency hacks

--- a/DCCpp_Uno/platformio.ini
+++ b/DCCpp_Uno/platformio.ini
@@ -22,7 +22,8 @@ lib_deps=
   LiquidCrystal_PCF8574
 
 [env:esp32]
-lib_ldf_mode = off
+lib_compat_mode=2
+lib_ldf_mode=chain+
 platform = espressif32_stage
 #https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
@@ -32,6 +33,3 @@ lib_deps=
     EEPROM
     Wire
     SPI
-lib_ignore=
-    Ethernet,
-    LiquidCrystal_PCF8574
