Start hacking on pulling in DCCpp_ESP into DCCpp_Uno
This still wont work, but compiles

--- a/DCCpp_Uno/platformio.ini
+++ b/DCCpp_Uno/platformio.ini
@@ -9,17 +9,17 @@
 ; http://docs.platformio.org/page/projectconf.html
 [common]
 build_flags=-std=c++14 -O3
-[env:atmelavr]
-platform=atmelavr
-board=megaatmega2560
-framework=arduino
-build_flags=${common.build_flags}
-lib_deps=
-  EEPROM
-  Wire
-  Ethernet
-  SPI
-  LiquidCrystal_PCF8574
+#[env:atmelavr]
+#platform=atmelavr
+#board=megaatmega2560
+#framework=arduino
+#build_flags=${common.build_flags}
+#lib_deps=
+#  EEPROM
+#  Wire
+#  Ethernet
+#  SPI
+#  LiquidCrystal_PCF8574
 
 [env:esp32]
 lib_compat_mode=2
@@ -28,8 +28,18 @@ platform = espressif32_stage
 #https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
 board = lolin32
-build_flags=${common.build_flags}
+build_flags=${common.build_flags} -DCOMM_INTERFACE=5
 lib_deps=
     EEPROM
     Wire
     SPI
+	ESPmDNS
+    https://github.com/me-no-dev/AsyncTCP#a1a184a953fc62e159730df17d9be77c2a2b2853
+    https://github.com/me-no-dev/ESPAsyncWebServer#313f337
+    ArduinoJson
+    TaskScheduler
+    Hash
+    SPIFFS
+	FS
+	ArduinoOTA
+	Update
