--- a/DCCpp_ESP/platformio.ini
+++ b/DCCpp_ESP/platformio.ini
@@ -8,6 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[common]
+build_flags=-std=c++14 -O3
 # if this is present, the build for esp32 fails due to dependency from esp async webserver to both espasynctcp and asynctcp.
 #[env:esp8266]
 #platform=https://github.com/platformio/platform-espressif8266.git#feature/stage
@@ -29,6 +31,7 @@ platform = espressif32_stage
 #https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
 board = lolin32
+build_flags=${common.build_flags}
 lib_deps=
     ESPmDNS
     https://github.com/me-no-dev/AsyncTCP#a1a184a953fc62e159730df17d9be77c2a2b2853
