Use espressif32 platofrm (instead of -stage)

--- a/DCCpp_Uno/platformio.ini
+++ b/DCCpp_Uno/platformio.ini
@@ -24,7 +24,7 @@ build_flags=-std=c++14 -O3
 [env:esp32]
 lib_compat_mode=2
 lib_ldf_mode=chain+
-platform = espressif32_stage
+platform = espressif32
 #https://github.com/platformio/platform-espressif32.git#feature/stage
 framework = arduino
 board = lolin32
@@ -43,3 +43,5 @@ lib_deps=
 	FS
 	ArduinoOTA
 	Update
+
+upload_port=/dev/cu.SLAB_USBtoUART
